test_files/should_pass/empty.wpdoc
{
  "version": 1,
  "text": "",
  "style": {
    "bold": false,
    "italic": false,
    "font": "Gaegu-Bold",
    "fontSize": 16
  }
}
