test_files/should_fail/truncated.wpdoc
{"version": 1, "text": "This file is truncated...